@@ -1,1 +1,2 @@
 DIST ovirt-engine-sdk-python-3.4.0.6.tar.gz 206915 SHA256 d361e22371d64656bbe3f1868c4bc82c03ed49717aa55227ca42a908fece8852 SHA512 26e0dbf7e9b7adaa01722d78382889103e9430d0b2ab10cb3896a480607af988684646b3349d095220ffd987c6d795da2e167121dee401468d4b749b7b7892b8 WHIRLPOOL 1e6272cef865ec9527ef0bd6f0763bd0e7aaaa5352531b339a3cabfe3c520b8ec4fa1c7e5c4bf6c4c185539d09ec2d4365a26a6463216f613e15d0a8b5292585
+DIST ovirt-engine-sdk-python-3.4.1.1.tar.gz 210890 SHA256 af311a1c0fd16b3fa3bce9518b2562f76c7b6c689f2509e8775ee3e840de4f10 SHA512 0fb90a72712490f917cd11a1901a095dfedda1b694d8c3ce205ceadcb3cf2a90e60dd0d78a2522383fa3b7c7ddfd793ef12454370ff9cdb8b8528c19a0df91fc WHIRLPOOL 70e042ed34afd8463a6b1ac8308690b057d304a42da53a86150274d7f5259e6bff49e37c8b985ea722efd7607cba63433c2b943deaabbaf999eeda5ff89c227d
